--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_chat_bubble: ^2.0.2
   image_picker: ^0.8.7+3
   intl: ^0.17.0
+  firebase_messaging: ^14.6.4
+  flutter_local_notifications: ^19.3.0
 
 dev_dependencies:
   flutter_test:
