--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,12 +69,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/images/blank_image.jpg
-    - assets/images/close_reminder.png
-    - assets/images/open_reminder.png
-    - assets/images/logo.png
-    - assets/images/grab.png
-    - assets/images/
+    - assets/images/login.png
+    - assets/images/register.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
