--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.17.0
   firebase_messaging: ^14.6.4
   flutter_local_notifications: ^19.3.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,7 @@ flutter:
     - assets/images/open_reminder.png
     - assets/images/logo.png
     - assets/images/grab.png
+    - assets/images/robot.png
     - assets/images/
 
 
