--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_messaging: ^14.6.4
   flutter_local_notifications: ^19.3.0
   http: ^1.4.0
+  firebase_storage: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
     - assets/images/login.png
     - assets/images/register.png
     - assets/images/robot.png
+    - assets/images/placeholder.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
