--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_local_notifications: ^19.3.0
   http: ^1.4.0
   firebase_storage: ^11.0.0
+  googleapis_auth: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +79,7 @@ flutter:
     - assets/images/robot.png
     - assets/images/placeholder.png
     - assets/images/fail.png
+    - assets/sa-key.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
