--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_auth: ^4.18.2
   cloud_firestore: ^4.16.2
   google_fonts: ^6.2.1
+  firebase_storage: ^11.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
