--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   http: ^1.4.0
   firebase_storage: ^11.0.0
   googleapis_auth: ^1.4.0
+  cloud_functions: ^4.5.4
 
 dev_dependencies:
   flutter_test:
