--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.25.2
-  firebase_auth: ^4.18.2
-  cloud_firestore: ^4.16.2
+  firebase_core: ^3.15.2  # UPDATED TO LATEST
+  firebase_auth: ^5.7.0   # UPDATED TO LATEST
+  cloud_firestore: ^5.6.12 # UPDATED TO LATEST
   google_fonts: ^6.2.1
-  firebase_storage: ^11.1.0
+  firebase_storage: ^12.4.10 # UPDATED TO LATEST
   video_player: ^2.6.0
-  youtube_player_flutter: ^8.1.0
-  flutter_html: ^2.2.1
+  youtube_player_flutter: ^9.1.1 # Keep this, as it dictates the web version
+  flutter_html: ^3.0.0-beta.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,6 +47,8 @@ dependencies:
   flutter_chat_bubble: ^2.0.2
   image_picker: ^0.8.7+3
   intl: ^0.17.0
+
+
 
 dev_dependencies:
   flutter_test:
@@ -103,3 +106,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
