--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,14 +45,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_chat_bubble: ^2.0.2
-  image_picker: ^0.8.7+3
-  intl: ^0.17.0
-  firebase_messaging: ^14.6.4
+  image_picker: ^1.1.2
+  intl: ^0.20.2
+  firebase_messaging: ^15.2.10
   flutter_local_notifications: ^19.3.0
   http: ^1.4.0
-  firebase_storage: ^11.0.0
-  googleapis_auth: ^1.4.0
-  cloud_functions: ^4.5.4
+  googleapis_auth: ^2.0.0
+  cloud_functions: ^5.6.2
 
 
 
@@ -65,7 +64,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
